--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Sampreet Sarkar</title>
+		<title>Sampreet Sarkar's Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,17 +19,17 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Sampreet Sarkar's Portfolio</h1>
+						<h1>Sampreet Sarkar</h1>
 						<p>I am a recent graduate in Control and Robotics from Ecole Centrale de Nantes,<br/>
-						   where I specialised in <i>Embedded Real-Time Systems</i>.</p>
+						   where I specialised in <i>Embedded Real-Time Systems</i></p>
 
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">About Me</a>
 					</header>
 
 				<!-- Nav -->
