--- a/generic.html
+++ b/generic.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic Page - Massively by HTML5 UP</title>
+		<title>Projects</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,21 +19,20 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Massively</a>
+						<a href="index.html" class="logo">Projects</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li><a href="index.html">This is Massively</a></li>
-							<li class="active"><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="index.html">About</a></li>
+							<li class="active"><a href="generic.html">Projects</a></li>
+							<li><a href="elements.html">Contact</a></li>
 						</ul>
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+							<li><a href="https://github.com/sampreets3" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
@@ -60,9 +59,7 @@
 						<section class="posts">
 							<article>
 								<header>
-									<span class="date">April 24, 2017</span>
-									<h2><a href="#">Sed magna<br />
-									ipsum faucibus</a></h2>
+									<h2><a href="#">Sed magna ipsum faucibus</a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
@@ -72,7 +69,6 @@
 							</article>
 							<article>
 								<header>
-									<span class="date">April 22, 2017</span>
 									<h2><a href="#">Primis eget<br />
 									imperdiet lorem</a></h2>
 								</header>
@@ -84,7 +80,6 @@
 							</article>
 							<article>
 								<header>
-									<span class="date">April 18, 2017</span>
 									<h2><a href="#">Ante mattis<br />
 									interdum dolor</a></h2>
 								</header>
@@ -96,7 +91,6 @@
 							</article>
 							<article>
 								<header>
-									<span class="date">April 14, 2017</span>
 									<h2><a href="#">Tempus sed<br />
 									nulla imperdiet</a></h2>
 								</header>
@@ -108,7 +102,6 @@
 							</article>
 							<article>
 								<header>
-									<span class="date">April 11, 2017</span>
 									<h2><a href="#">Odio magna<br />
 									sed consectetur</a></h2>
 								</header>
@@ -120,7 +113,6 @@
 							</article>
 							<article>
 								<header>
-									<span class="date">April 7, 2017</span>
 									<h2><a href="#">Augue lorem<br />
 									primis vestibulum</a></h2>
 								</header>
@@ -135,7 +127,7 @@
 						<!-- Footer -->
 						<footer>
 							<div class="pagination">
-								<!--<a href="#" class="previous">Prev</a>-->
+								<a href="#" class="previous">Prev</a>
 								<a href="#" class="page active">1</a>
 								<a href="#" class="page">2</a>
 								<a href="#" class="page">3</a>
