Removed elements, added contact
Removed the access to the "elements.html" page when we click from the
landing page.

- Removed access to elements.html
- Added contact.html
- Added images/background-landing.jpeg(to be integrated yet)

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">About</a></li>
-							<li><a href="generic.html">Projects</a></li>
-							<li><a href="elements.html"></a>Contact</li>
+							<li><a href="projects.html">Projects</a></li>
+							<li><a href="contact.html"></a>Contact</li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -74,10 +74,26 @@
 					<!-- Work Experience -->
 					<h2>Work Experience</h2>
 						<div class="box">
+
+							<!--
 							<header>
 								<h2>Embedded Vision and Machine Learning Intern</h2>
 								<p>3D Aerospace</p>
 							</header>
+							-->
+
+							<div class="table-wrapper">
+								<table class="alt">
+									<tbody>
+										<tr>
+											<td><strong>Embedded Vision and Machine Learning Intern</strong><br />
+											3D Aerospace</td>
+											<td>February 2021 - August 2021<br/>
+											Toulouse, France</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 
 							Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
 							Aliquid ullam rem veritatis molestiae unde reiciendis doloribus 
