--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Sampreet Sarkar</h1>
 						<p>I am a recent graduate in Control and Robotics from Ecole Centrale de Nantes,<br/>
-						   where I specialised in <i>Embedded Real-Time Systems</i></p>
+						   where I specialised in <i>Embedded Real-Time Systems.</i></p>
 						   
 						   <a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a>
 						</ul>
