--- a/projects.html
+++ b/projects.html
@@ -39,87 +39,82 @@
 				<!-- Main -->
 				<div id="main">
 
-					<!-- Featured Post -->
+					<!-- Featured Post 
 						<article class="post featured">
 							<header class="major">
 								<span class="date">April 25, 2017</span>
-								<h2><a href="#">And this is a<br />
-								massive headline</a></h2>
-								<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-								facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-								amet nullam sed etiam veroeros.</p>
+								<h2><a href="https://github.com/sampreets3/treecounter-ML">tree counter</a></h2>
+								<p>A simple application that detects and counts the number of trees in a vineyard.<br />
+									 Makes use of darknet and OpenCV.<br /></p>
 							</header>
 							<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 							<ul class="actions special">
-								<li><a href="#" class="button large">Full Story</a></li>
+								<li><a href="https://github.com/sampreets3/treecounter-ML" class="button large">Read More</a></li>
 							</ul>
 						</article>
+					-->
 
 					<!-- Posts -->
 						<section class="posts">
 							<article>
 								<header>
-									<h2><a href="#">Sed magna ipsum faucibus</a></h2>
+									<h2><a href="https://github.com/sampreets3/treecounter-ML">tree counter</a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<p>A simple application that detects and counts the number of trees in a vineyard, using the darknet framework and OpenCV.</p>
 								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
+									<li><a href="https://github.com/sampreets3/treecounter-ML" class="button large">Read More</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<h2><a href="#">Primis eget<br />
-									imperdiet lorem</a></h2>
+									<h2><a href="https://github.com/sampreets3/ROS-follower">ROS-based swarm follower</a></h2>
+								</header>
+								<a href="https://github.com/sampreets3/ROS-follower/blob/master/img/output.gif" class="image fit"><img src="images/screen-ros-follower.gif" alt="" /></a>
+								<p>A simple ROS package where a swarm of robots follow a leader. Both the leader and the robots are visualised as cubes.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/sampreets3/ROS-follower" class="button">Full Story</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<h2><a href="#">Rate monotonic Scheduler simulator</a></h2>
+								</header>
+								<a href="https://github.com/sampreets3/scheduler-RM" class="image fit"><img src="images/screen-output-rm.gif" alt="" /></a>
+								<p>Simulation of the behavior of a Preemptive Fixed Priority Rate Monotonic Scheduler in C++.</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/sampreets3/scheduler-RM" class="button">Read More</a></li>
+								</ul>
+							</article>
+							<article>
+								<header>
+									<h2><a href="https://github.com/sampreets3/orb-tracking">ORB-based object tracking</a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<p>Tracking of an object using the ORB detector in OpenCV.</p>
 								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
+									<li><a href="https://github.com/sampreets3/orb-tracking" class="button">Read More</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<h2><a href="#">Ante mattis<br />
-									interdum dolor</a></h2>
+									<h2><a href="https://github.com/sampreets3/spi-stepper-controller">SPI-based Stepper Controller<br />
+									</a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<a href="#" class="image fit"><img src="images/motor-control-spi.png" alt="" /></a>
+								<p>Design for an SPI based bipolar stepper motor controller, useful in robotic/3D printing applications.</p>
 								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
+									<li><a href="https://github.com/sampreets3/spi-stepper-controller" class="button">Read More</a></li>
 								</ul>
 							</article>
 							<article>
 								<header>
-									<h2><a href="#">Tempus sed<br />
-									nulla imperdiet</a></h2>
+									<h2><a href="https://github.com/APLA-Toolbox/pymapf">pymapf<br /></a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+								<a href="https://github.com/APLA-Toolbox/pymapf" class="image fit"><img src="images/screen-pymapf.gif" alt="" /></a>
+								<p>A Python toolbox for Multi-Agents Planning (Centralized and Decentralized) </p>
 								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
-								</ul>
-							</article>
-							<article>
-								<header>
-									<h2><a href="#">Odio magna<br />
-									sed consectetur</a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
-								</ul>
-							</article>
-							<article>
-								<header>
-									<h2><a href="#">Augue lorem<br />
-									primis vestibulum</a></h2>
-								</header>
-								<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-								<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button">Full Story</a></li>
+									<li><a href="https://github.com/APLA-Toolbox/pymapf" class="button">Read More</a></li>
 								</ul>
 							</article>
 						</section>
@@ -141,60 +136,10 @@
 
 				</div>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<section>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="3"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split contact">
-							<section class="alt">
-								<h3>Address</h3>
-								<p>1234 Somewhere Road #87257<br />
-								Nashville, TN 00000-0000</p>
-							</section>
-							<section>
-								<h3>Phone</h3>
-								<p><a href="#">(000) 000-0000</a></p>
-							</section>
-							<section>
-								<h3>Email</h3>
-								<p><a href="#">info@untitled.tld</a></p>
-							</section>
-							<section>
-								<h3>Social</h3>
-								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-									<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>
-							</section>
-						</section>
-					</footer>
-
 				<!-- Copyright -->
 					<div id="copyright">
 						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
-
 			</div>
 
 		<!-- Scripts -->
