Updated website content

--- a/index.html
+++ b/index.html
@@ -58,14 +58,23 @@
 							<span class="image right"><img src="images/pic01.jpg" alt="Image not available" width="240" height="240"/></span>
 							Hello, my name is Sampreet Sarkar. I recently graduated from Ecole 
 							Centrale de Nantes, where I was pursuing my <a href="https://www.ec-nantes.fr">
-							Master's in Control and Robotics</a>, specialising in Embedded Real-Time Systems.<br />
+							Master's in Control and Robotics</a>, specialising in Embedded Real-Time Systems.<br /><br />
 
 							I did my end-of-studies internship in the domain of Embedded Vision and Machine Learning at 3D Aerospace, 
 							a young European start-up working in AI-Enabled predictive maintenance for the Viticulture industry. My work was 
 							focussed in using Deep Learning and Computer Vision to detect and track individual vines in a vineyard. It was a
 							great experience for me since I not only got to learn about how we can use Computer Vision to our advantage in the field, 
-							but was also able to integrate the concepts of viticulture that I gained from my colleagues into the solution.
-													
+							but was also able to integrate the concepts of viticulture that I gained from my colleagues into the solution.<br /><br />
+
+							I am currently working as a research engineer at the <a href="https://www.cea.fr">French Atomic Energy Commission <i>(Commissariat à l'énergie atomique et aux énergies alternatives)</i></a>a
+							in Nantes, where I work in the <em>Robotics for the Assistance of Humans</em> team. My current work focusses on the control and path planning for 
+							a collaborative robot arm to reach objects in a rapidly changing environment. It's a fun project, which has helped me learn a lot about the real-world applications
+							for robotics. Using ROS2 and MoveIt2 to generate a plan to an object in a scene also gave me a decent bit of exposure towards the overall software development side
+							of things.<br /><br />
+
+							Since my name is not Jack and I am not a dull boy, I think it is safe to assume that my life is <em>"some work, and some play"</em>. I am interested in a lot of things and curious by nature, so I generally try to take up a wide variety of activities. Not all of them stick with me long-term, it's 
+							still a process of trial and error for me. Some things I do like to do in my free time is hang out with my friends <em>(We play darts a lot)</em>, playing the guitar/modifying guitar effects pedals 
+							<em>(yes I know, super nerdy stuff)</em>, and if the weather permits, go for a nice walk to de-stress and relax a bit.<br /><br />
 						</p>
 
 					<hr />
