Updated information on website

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
 							great experience for me since I not only got to learn about how we can use Computer Vision to our advantage in the field, 
 							but was also able to integrate the concepts of viticulture that I gained from my colleagues into the solution.<br /><br />
 
-							I am currently working as a research engineer at the <a href="https://www.cea.fr">French Atomic Energy Commission <i>(Commissariat à l'énergie atomique et aux énergies alternatives)</i></a>a
-							in Nantes, where I work in the <em>Robotics for the Assistance of Humans</em> team. My current work focusses on the control and path planning for 
-							a collaborative robot arm to reach objects in a rapidly changing environment. It's a fun project, which has helped me learn a lot about the real-world applications
-							for robotics. Using ROS2 and MoveIt2 to generate a plan to an object in a scene also gave me a decent bit of exposure towards the overall software development side
-							of things.<br /><br />
+							I am currently working as a research engineer at the <a href="https://www.cea.fr">French Atomic Energy Commission <i>(Commissariat à l'énergie atomique 
+							et aux énergies alternatives)</i></a> in Nantes, where I work in the <em>Robotics for the Assistance of Humans</em> team. My current work focusses on the control and path planning for 
+							a collaborative robot arm to reach objects in a rapidly changing environment. It's a fun project, which has helped me learn a lot about the real-world 
+							applications for robotics. Using ROS2 and MoveIt2 to generate a plan to an object in a scene also gave me a decent bit of exposure towards the overall 
+							software development side of things.<br /><br />
 
 							Since my name is not Jack and I am not a dull boy, I think it is safe to assume that my life is <em>"some work, and some play"</em>. I am interested in a lot of things and curious by nature, so I generally try to take up a wide variety of activities. Not all of them stick with me long-term, it's 
 							still a process of trial and error for me. Some things I do like to do in my free time is hang out with my friends <em>(We play darts a lot)</em>, playing the guitar/modifying guitar effects pedals 
@@ -95,10 +95,14 @@
 								</table>
 							</div>
 
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-							Aliquid ullam rem veritatis molestiae unde reiciendis doloribus 
-							nulla maiores molestias iure, tempora eius adipisci, harum obcaecati 
-							laboriosam qui ipsam numquam omnis.
+							<ul class="alt">
+								<li>Development of software to control and manipulate a collaborative robot arm within a dynamic environment, using <b><em>ROS2</em></b></li>
+								<li>Development and maintenance of a demonstrator with the robot and its mobile platform to showcase the PoC for the application</li>
+								<li>Integration of various industrial sensors and a third-party mobile platform to be able to communicate with the robot and be controllable via ROS2</li>
+								<li>Detection and tracking of the objects of interest using OpenCV, PyTorch, and ONNX on an industrial embedded computer</li>
+								<li>Trajectory generation and path planning by avoiding dynamic obstacles using MoveIt2</li>
+							</ul>
+
 
 							<hr />
 
@@ -115,10 +119,10 @@
 								</table>
 							</div>
 
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-							Aliquid ullam rem veritatis molestiae unde reiciendis doloribus 
-							nulla maiores molestias iure, tempora eius adipisci, harum obcaecati 
-							laboriosam qui ipsam numquam omnis.
+							<ul class="alt">
+								<li>Developed applications for detection of missing trees in a vineyard using Computer Vision and Deep Learning techniques</li>
+								<li>Assisted in the development of grape yield estimation, by making use of instance segmentation algorithms on RGB images captured from a custom receiver</li>
+							</ul>
 
 							<hr />
 
@@ -134,11 +138,12 @@
 									</tbody>
 								</table>
 							</div>
-
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-							Aliquid ullam rem veritatis molestiae unde reiciendis doloribus 
-							nulla maiores molestias iure, tempora eius adipisci, harum obcaecati 
-							laboriosam qui ipsam numquam omnis.
+							
+							<ul class="alt">
+								<li>Made non-trivial contributions to the development of PoC for a drowsiness detector</li>
+								<li>Helped in preparing the plan to upskill the factory to Industry 4.0 standards</li>
+								<li>Directly involved in a Robotics project at the Digital Lab</li>
+							</ul>
 						</div>
 					<hr />
 					
@@ -159,31 +164,29 @@
 								</table>
 							</div>
 
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-							Aliquid ullam rem veritatis molestiae unde reiciendis doloribus 
-							nulla maiores molestias iure, tempora eius adipisci, harum obcaecati 
-							laboriosam qui ipsam numquam omnis.
+							Specialisation in <b><i>Embedded Real-Time Systems</i></b>. Focused on <em>low-level driver development</em> 
+							for sensors and actuators, development of <em>path-planning algorithms</em> for robots in 
+							simulation, <em>Software development for Robotics</em>, <em>Real-Time Scheduling</em> for embedded systems, 
+							<em>Computer Vision</em>, and <em>Signal Processing</em>.
 
 							<hr />
 
-							<div class="box">
-								<div class="table-wrapper">
-									<table class="alt">
-										<tbody>
-											<tr>
-												<td><strong>B.Tech in Robot Manufacturing</strong><br />
-												The Neotia University</td>
-												<td>August 2015 - July 2019<br/>
-												Kolkata, India</td>
-											</tr>
-										</tbody>
-									</table>
-								</div>
+							<div class="table-wrapper">
+								<table class="alt">
+									<tbody>
+										<tr>
+											<td><strong>B.Tech in Robotics and Automation</strong><br />
+											The Neotia University</td>
+											<td>August 2015 - July 2019<br/>
+											Kolkata, India</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
 
-							Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-							Aliquid ullam rem veritatis molestiae unde reiciendis doloribus 
-							nulla maiores molestias iure, tempora eius adipisci, harum obcaecati 
-							laboriosam qui ipsam numquam omnis.
+							Relevant coursework on Control Systems, Digital Logic Design, Machine Design, Real-Time Systems, and Human-Robot Interaction.
+							As an integral part of the Robotics Lab, I helped develop the service robot MARIA, where my work was focussed on development of
+							the control algorithms, and the low-level electronic design and driver integration.
 
 						</div>
 
