Added form submission

--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
 
 					<section>
 						<h3>Contact form</h3> 
-						<form method="post" action="https://formsubmit.co/39470cb6455a0760d607e9a17aa65411">
+						<form method="post" action="https://formsubmit.co/contact@sampreetsarkar.net">
 							<div class="row gtr-uniform">
 								<div class="col-6 col-12-xsmall">
 									<input type="text" name="demo-name" id="demo-name" value="" placeholder="Name" />
