Updated index page with skills section

--- a/index.html
+++ b/index.html
@@ -72,12 +72,37 @@
 							applications for robotics. Using ROS2 and MoveIt2 to generate a plan to an object in a scene also gave me a decent bit of exposure towards the overall 
 							software development side of things.<br /><br />
 
-							Since my name is not Jack and I am not a dull boy, I think it is safe to assume that my life is <em>"some work, and some play"</em>. I am interested in a lot of things and curious by nature, so I generally try to take up a wide variety of activities. Not all of them stick with me long-term, it's 
+							I am interested in a lot of things and curious by nature, so I generally try to take up a wide variety of activities. Not all of them stick with me long-term, it's 
 							still a process of trial and error for me. Some things I do like to do in my free time is hang out with my friends <em>(We play darts a lot)</em>, playing the guitar/modifying guitar effects pedals 
 							<em>(yes I know, super nerdy stuff)</em>, and if the weather permits, go for a nice walk to de-stress and relax a bit.<br /><br />
 						</p>
 
 					<hr />
+
+					<h2>Skills</h2>
+					<div class="box">
+						<dl>
+							<dt>Robotics and AI</dt>
+								<dd>
+									<p><i>ROS2, MoveIt2, Mobile Robots, Inverse Kinematics Modelling, Computer Vision, Deep Learning, Machine Learning, PyTorch</i></p>
+								</dd>
+							<dt>Embedded Systems and Software</dt>
+								<dd>
+									<p><i>Trampoline RTOS, Bare metal programming, Digital Signal Processing, Real-Time Scheduling</i></p>
+								</dd>
+							<dt>Embedded Hardware</dt>
+								<dd>
+									<p><i>STM32, RP2040, ATMega328, Xilinx Spartan, Xilinx CoolRunner, Raspberry Pi, Jetson AGX, Industrial Embedded Computers</i></p>
+								</dd>
+							<dt>Development Tools</dt>
+								<dd>
+									<p><i>Git, Keil MDK, KiCAD, SolidWorks, Simulink, Docker, CMake</i></p>
+								</dd>
+							</dl>
+					</div>
+
+					<hr />
+
 
 					<!-- Work Experience -->
 					<h2>Work Experience</h2>
